# flow-key-virtual-greenscreen

./: .gitignore  CMakeLists.txt  flight.jfr  readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/kotlin/net/javaman/flowkey/: FlowKeyApplication.kt
app/src/main/kotlin/net/javaman/flowkey/filters/: CudaFilter.kt
app/src/main/kotlin/net/javaman/flowkey/stages/: FilterProperty.kt  FilterPropertyNameTableCell.kt  FilterPropertyTableCell.kt  FilterPropertyValueTableCell.kt  GeneralSettingsNameTableCell.kt  GeneralSettingsProperty.kt  GeneralSettingsValueTableCell.kt  IntTableCell.kt  StageController.kt
app/src/main/kotlin/net/javaman/flowkey/util/: Camera.kt  Consts.kt  Util.kt
src/main/kotlin/: test.kt
src/main/kotlin/net/javaman/flowkey/: Camera.kt  Filter.kt  FlowKeyApplication.kt  StageController.kt  Util.kt
src/main/kotlin/net/javaman/flowkey/filters/: CudaFilter.kt  Filter.kt  OpenClFilter.kt
src/main/kotlin/net/javaman/flowkey/stages/: StageController.kt
src/main/kotlin/net/javaman/flowkey/util/: Camera.kt  Consts.kt  Util.kt
src/main/resources/net/javaman/flowkey/: Common.cl  Filter.cl  FlowKey.cl  InitialComparison.cl  NoiseReduction.cl  Stage.fxml  Util.cl
src/main/resources/net/javaman/flowkey/cuda/: InitialComparison.cu  NoiseReduction.cu  Util.cu
src/main/resources/net/javaman/flowkey/opencl/: InitialComparison.cl  Splash.cl
src/main/resources/net/javaman/flowkey/stages/: Stage.fxml
src/net/javaman/flowkey/: Camera.kt  Filter.kt  FlowKeyApplication.kt  StageController.kt  Util.kt
(+37 files in other folders)
